--- a/src/main/webapp/helloWorld.xhtml
+++ b/src/main/webapp/helloWorld.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 <head>
-<title>DevOps Class</title>
+<title>Welcome to Tomcat Web server</title>
 </head>
 <body>
 <ui:composition template="/template.xhtml">
